# example-generate-build-project-multiple-plataforms

./: .gitignore  Dockerfile.cross-windows  Dockerfile.simple  Dockerfile.windows  INSTRUCCIONES-WINDOWS.md  NOTES.md  README.md  REQUISITOS-PLATAFORMA.md  WINDOWS-SETUP.md  build-all.sh  build-simple.sh  build-windows-cross.sh  build-windows-docker.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  update-and-build.ps1
apps/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: App.tsx  env.d.ts
backend/: package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
